Total refactoring + README.md